SapMachine #1982: Omit some cds archives in the delivery of SapMachine